--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: blueviolet;
+  color:white;
 }
+
+
+ul, li, h1,h2,h3 {
+
+  margin:0;
+  padding:0;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
